[package]
name = "playaround"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.14"
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
ai_function_copy_course = {path = "/home/gabe/workstation/RustProject/playaround/ai_functions_copy_course"}
